tdf#129743: don't delete mark of current cursor when creating new cursor

The deletion was there since initial import in commit
84a3db80b4fd66c6854b3135b5f69b61fd828e62. It's unclear why would it
be necessary and what depend on it. All tests pass => let's drop it.

Another (less intrusive, and IMO more of a workaround) way would be
to move setting mark of pCursor after the loop over GetNext() in
SwCursorShell::SetSelection.

Change-Id: I5402db58d8f829799bc16b8f4f6014bcea133995