sw/qa/extras/unowriter/unowriter.cxx
@@ -20,6 +20,7 @@
 #include <com/sun/star/awt/XToolkit.hpp>
 #include <com/sun/star/graphic/XGraphic.hpp>
 #include <com/sun/star/style/LineSpacing.hpp>
+#include <com/sun/star/view/XSelectionSupplier.hpp>
 #include <comphelper/propertyvalue.hxx>
 #include <toolkit/helper/vclunohelper.hxx>
 #include <vcl/graphicfilter.hxx>
@@ -784,6 +785,43 @@ CPPUNIT_TEST_FIXTURE(SwUnoWriter, testTextConvertToTableLineSpacing)
     // I.e. the 360 twips line spacing was taken from the table style, not the 220 twips one from
     // the paragraph style.
     CPPUNIT_ASSERT_EQUAL(static_cast<sal_Int16>(convertTwipToMm100(220)), aLineSpacing.Height);
+}
+
+CPPUNIT_TEST_FIXTURE(SwUnoWriter, testMultiSelect)
+{
+    // Create a new document and add a text with several repeated sequences.
+    loadURL("private:factory/swriter", nullptr);
+    uno::Reference<text::XTextDocument> xTextDocument(mxComponent, css::uno::UNO_QUERY_THROW);
+    auto xSimpleText = xTextDocument->getText();
+    xSimpleText->insertString(xSimpleText->getStart(), "abc abc abc", false);
+
+    // Create a search descriptor and find all occurencies of search string
+    css::uno::Reference<css::util::XSearchable> xSearchable(mxComponent, css::uno::UNO_QUERY_THROW);
+    auto xSearchDescriptor = xSearchable->createSearchDescriptor();
+    xSearchDescriptor->setPropertyValue("SearchStyles", css::uno::Any(false));
+    xSearchDescriptor->setPropertyValue("SearchCaseSensitive", css::uno::Any(false));
+    xSearchDescriptor->setPropertyValue("SearchBackwards", css::uno::Any(true));
+    xSearchDescriptor->setPropertyValue("SearchRegularExpression", css::uno::Any(false));
+    xSearchDescriptor->setSearchString("Abc");
+    auto xSearchResult = xSearchable->findAll(xSearchDescriptor);
+
+    // Select them all
+    auto xController = xTextDocument->getCurrentController();
+    css::uno::Reference<css::view::XSelectionSupplier> xSelectionSupplier(
+        xController, css::uno::UNO_QUERY_THROW);
+    xSelectionSupplier->select(css::uno::Any(xSearchResult));
+    css::uno::Reference<css::container::XIndexAccess> xSelection(xSelectionSupplier->getSelection(),
+                                                                 css::uno::UNO_QUERY_THROW);
+    // Now check that they all are selected.
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(3), xSelection->getCount());
+    for (sal_Int32 i = 0; i < xSelection->getCount(); ++i)
+    {
+        css::uno::Reference<css::text::XTextRange> xTextRange(xSelection->getByIndex(i),
+                                                              css::uno::UNO_QUERY_THROW);
+        // For i=0, result was empty (cursor was put before the last occurence without selection)
+        const OString sComment = "i=" + OString::number(i);
+        CPPUNIT_ASSERT_EQUAL_MESSAGE(sComment.getStr(), OUString("abc"), xTextRange->getString());
+    }
 }
 
 CPPUNIT_PLUGIN_IMPLEMENT();
